# AppliedResearchOAfa2025

./: .gitignore  README.md  aiGT_speedRun.ipynb  app.js  app.py  description.txt  emotion_classifier.py  env_template.txt  frontend.py  index.html  requirements.txt
Vedant_Lalit_Bhatt/: README.md  requirements.txt  submission.py
Vedant_Nahar_FootFit/: README.md  app.py  cv_utils.py  recommend.py  requirements.txt
my-model/: model.safetensors
submissions/: FantasyFootballTradeAnalyzer.py  IlishaGupta.py  LLM_Instruction_fine_tuning.ipynb  README  README.md  Siri_Munigunti.ipynb  Untitled10.ipynb  VinhPham.py  ai@gt.py  aiGT_speedRun.ipynb  app.py  appy_fixed.py  captioner.py  expand.py  frontend.py  geoguessr.py  guess_demo.py  judge_prompt.txt  main.ipynb  main.py  make_recipe.py  nba-minutes-precictor.py  neha_nataraj  preprocess.py  prompt.txt  readMe.md  readme.md  requirements.txt  simple_gui.py  zero-shot-image-classification.py
submissions/Isaac Hung/: README.md  pyproject.toml  requirements.txt  twinlitenetplus.py
submissions/SinLiangLee/: .env.example  README.md  pyproject.toml  requirements.txt
submissions/SinLiangLee/ai_docs/: __init__.py
submissions/SinLiangLee/ai_docs/cli/: __init__.py  commands.py
submissions/SinLiangLee/ai_docs/config/: __init__.py  prompts.py  settings.py
submissions/SinLiangLee/ai_docs/core/: __init__.py  llm_client.py
submissions/SinLiangLee/ai_docs/integrations/: __init__.py  git_client.py
submissions/SinLiangLee/ai_docs/utils/: __init__.py  helpers.py
submissions:YsmaelSandoval/: README.md  requirements.txt
(+395 files in other folders)
