[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docs-generator"
version = "0.1.0"
description = "AI-powered documentation generator with git hooks"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "gitpython",
    "pygithub", 
    "transformers>=4.35.0",
    "torch>=2.0.0", 
    "accelerate",
    "optimum[cpu]",
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2",
    "rich",
    "python-dotenv",
    "watchdog"
]

[project.scripts]
ai-docs = "ai_docs.cli.commands:main"

[tool.setuptools.packages.find]
include = ["ai_docs*"]
exclude = ["changelogs*", "docs*"]